--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
           </div>
         </div>
       </div>
+      <footer>
+        This project was coded by Thai Ha, and is open-source on
+        <a href="https://github.com/thaihanguyen98/weather-app-project/"
+          >GitHub</a
+        >
+      </footer>
     </div>
     <script src="src/index.js"></script>
   </body>
