--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
               />
               <span class="temperature" id="temperature">19</span
               ><span class="units">
-                <a href="#" id="celsius-link">°C</a> |
+                <a href="#" id="celsius-link" class="active">°C</a> |
                 <a href="#" id="fahrenheit-link">°F</a>
               </span>
-              <span id="weather-description">Parly cloudy</span>
+              <span id="weather-description">Party cloudy</span>
             </div>
           </div>
           <div class="col-3">
