change from Precipitation to Feels like

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <ul id="weather-info">
               <li>
                 <img
-                  src="icons/cloud-drizzle.svg"
+                  src="icons/thermometer-half.svg"
                   alt="feels-like-icon"
                   class="icon"
                 />
-                <span id="Precipitation">Precipitation: 0%</span>
+                Feels like: <span id="feels-like">20</span>°C
               </li>
               <li>
                 <img
