add AM PM feature

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="row header">
           <div class="col-6">
             <h1 id="city">Sydney</h1>
-            <h2 id="dateTime">Monday, 21 August 2023 | 01 : 45 PM</h2>
+            <h2 id="dateTime" class="dateTime">
+              Monday, 21 August 2023 | 01 : 45 PM
+            </h2>
           </div>
           <div class="col-5">
             <form class="search-form" id="search-form">
