change the weather icon size

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="col-7 current-weather">
             <div class="clearfix">
               <img
-                src="icons/cloudy01.svg"
+                src="icons/01d.svg"
                 alt="sunny"
                 class="weather-icon"
                 id="weather-icon"
