--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes</title>
+    <title>Vanilla Weather Forecast App | Thai Ha</title>
     <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
       <div class="weather-app">
         <div class="row header">
           <div class="col-6">
-            <h1 id="city">Sydney, <span id="country">Australia</span></h1>
+            <h1 id="city">Sydney</h1>
             <h2 id="dateTime" class="dateTime">
               Monday, 21 August 2023 | 01 : 45 PM
             </h2>
@@ -100,75 +100,7 @@
           </div>
         </div>
         <div class="container text-center">
-          <div class="weather-forecast" id="forecast">
-            <div class="row">
-              <div class="col weekdays">
-                <h3>Monday</h3>
-                <img
-                  src="icons/wind01.svg"
-                  alt="windy icon"
-                  class="weekday-weather"
-                />
-                <p class="forecast-temp">
-                  <span class="forecast-temp-max">20°</span> -
-                  <span class="forecast-temp-min"></span>5°
-                </p>
-                <p class="weather-type">windy</p>
-              </div>
-              <div class="col weekdays">
-                <h3>Tuesday</h3>
-                <img
-                  src="icons/sun01.svg"
-                  alt="sunny icon"
-                  class="weekday-weather"
-                />
-                <p class="forecast-temp">
-                  <span class="forecast-temp-max">20°</span>-
-                  <span class="forecast-temp-min"></span>5°
-                </p>
-                <p class="weather-type">sunny</p>
-              </div>
-              <div class="col weekdays">
-                <h3>Wednesday</h3>
-                <img
-                  src="icons/snow01.svg"
-                  alt="snow icon"
-                  class="weekday-weather"
-                />
-                <p class="forecast-temp">
-                  <span class="forecast-temp-max">20°</span>-
-                  <span class="forecast-temp-min"></span>5°
-                </p>
-                <p class="weather-type">snow</p>
-              </div>
-              <div class="col weekdays">
-                <h3>Thursday</h3>
-                <img
-                  src="icons/thurder01.svg"
-                  alt="thunder icon"
-                  class="weekday-weather"
-                />
-                <p class="forecast-temp">
-                  <span class="forecast-temp-max">20°</span>-
-                  <span class="forecast-temp-min"></span>5°
-                </p>
-                <p class="weather-type">thunder</p>
-              </div>
-              <div class="col weekdays">
-                <h3>Friday</h3>
-                <img
-                  src="icons/rain02.svg"
-                  alt="rainy icon"
-                  class="weekday-weather"
-                />
-                <p class="forecast-temp">
-                  <span class="forecast-temp-max">20°</span>-
-                  <span class="forecast-temp-min"></span>5°
-                </p>
-                <p class="weather-type">raining</p>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="weather-forecast"></div>
         </div>
       </div>
       <footer>
